src/app/features/home/components/InfoSection/InfoSection.scss
@use "../../../../../styles/variables" as *;

:host {
  --spacing-local-big: 5rem;
}

.info-section {
  &__container {
    display: flex;
    gap: var(--spacing-local-big);

    @media only screen and (max-width: 1180px) {
      flex-direction: column;
      gap: var(--spacing-local-big);
      width: 70vw;
      margin: auto;
    }
  }

  &__text {
    font-size: 2.5rem;
    list-style-position: inside;
    color: $font-color-gray;

    @media only screen and (min-width: 860px) and (max-width: 933px) {
      font-size: $font-size-default;
    }

    @media only screen and (max-width: 430px) {
      font-size: $font-size-small;
    }

    &--link {
      &:link,
      &:visited {
        text-decoration: underline;
        display: block;
      }
    }
  }
}

